// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Routes child path of the app matches the snapshot on the rootpath 1`] = `
<div
  id="ac_layout"
>
  <a
    className="app-switch"
    href="/"
    onClick={[Function]}
  >
    +
  </a>
  <div
    className="new"
  >
    <div
      className="ac-header"
    >
      <h3>
        Выбрать услуги
      </h3>
      <a
        className="back-link"
        href="/_appliance/"
        onClick={[Function]}
      >
        ←
      </a>
    </div>
  </div>
</div>
`;

exports[`Routes doesn't render the app everywhere 1`] = `
<div
  id="ac_layout"
>
  <a
    className="app-switch"
    href="/test/bauble.html/_appliance/"
    onClick={[Function]}
  >
    +
  </a>
</div>
`;

exports[`Routes matches the snapshot on the nested path 1`] = `
<div
  id="ac_layout"
>
  <a
    className="app-switch"
    href="/test/bauble.html"
    onClick={[Function]}
  >
    +
  </a>
  <div
    id="online_appointment"
  >
    <div
      className="ac-header"
    >
      <h3>
        Онлайн запись
      </h3>
    </div>
    <a
      className="main-link chosen"
      href="/test/bauble.html/_appliance/choose-center/"
      onClick={[Function]}
    >
      <span
        className="title"
      >
        Изменить центр красоты
      </span>
      <span
        className="info-text"
      >
        TEST_NAME
      </span>
      <svg
        className="svg-arrow-right"
        viewBox="763 178.586 18.414 12.828"
        xmlns="http://www.w3.org/2000/svg"
      >
        <g
          data-name="Стрелка вперед"
          transform="translate(763 179)"
        >
          <line
            className="cls-1"
            data-name="Line 7"
            id="Line_7"
            transform="translate(12 6)"
            x1="5"
            y2="5"
          />
          <line
            className="cls-1"
            data-name="Line 8"
            id="Line_8"
            transform="translate(12 1)"
            x1="5"
            y1="5"
          />
          <line
            className="cls-1"
            data-name="Line 9"
            id="Line_9"
            transform="translate(1 6)"
            x1="16"
          />
        </g>
      </svg>
    </a>
    <a
      className="main-link"
      href="/test/bauble.html/_appliance/choose-employee/"
      onClick={[Function]}
    >
      <span
        className="title"
      >
        Выбрать
         сотрудника
      </span>
      <svg
        className="svg-arrow-right"
        viewBox="763 178.586 18.414 12.828"
        xmlns="http://www.w3.org/2000/svg"
      >
        <g
          data-name="Стрелка вперед"
          transform="translate(763 179)"
        >
          <line
            className="cls-1"
            data-name="Line 7"
            id="Line_7"
            transform="translate(12 6)"
            x1="5"
            y2="5"
          />
          <line
            className="cls-1"
            data-name="Line 8"
            id="Line_8"
            transform="translate(12 1)"
            x1="5"
            y1="5"
          />
          <line
            className="cls-1"
            data-name="Line 9"
            id="Line_9"
            transform="translate(1 6)"
            x1="16"
          />
        </g>
      </svg>
    </a>
    <a
      className="main-link"
      href="/test/bauble.html/_appliance/choose-services/"
      onClick={[Function]}
    >
      <span
        className="title"
      >
        Выбрать услуги
      </span>
      <svg
        className="svg-arrow-right"
        viewBox="763 178.586 18.414 12.828"
        xmlns="http://www.w3.org/2000/svg"
      >
        <g
          data-name="Стрелка вперед"
          transform="translate(763 179)"
        >
          <line
            className="cls-1"
            data-name="Line 7"
            id="Line_7"
            transform="translate(12 6)"
            x1="5"
            y2="5"
          />
          <line
            className="cls-1"
            data-name="Line 8"
            id="Line_8"
            transform="translate(12 1)"
            x1="5"
            y1="5"
          />
          <line
            className="cls-1"
            data-name="Line 9"
            id="Line_9"
            transform="translate(1 6)"
            x1="16"
          />
        </g>
      </svg>
    </a>
    <a
      className="main-link"
      href="/test/bauble.html/_appliance/choose-datetime/"
      onClick={[Function]}
    >
      <span
        className="title"
      >
        Выбрать дату и время
      </span>
      <svg
        className="svg-arrow-right"
        viewBox="763 178.586 18.414 12.828"
        xmlns="http://www.w3.org/2000/svg"
      >
        <g
          data-name="Стрелка вперед"
          transform="translate(763 179)"
        >
          <line
            className="cls-1"
            data-name="Line 7"
            id="Line_7"
            transform="translate(12 6)"
            x1="5"
            y2="5"
          />
          <line
            className="cls-1"
            data-name="Line 8"
            id="Line_8"
            transform="translate(12 1)"
            x1="5"
            y1="5"
          />
          <line
            className="cls-1"
            data-name="Line 9"
            id="Line_9"
            transform="translate(1 6)"
            x1="16"
          />
        </g>
      </svg>
    </a>
    <div
      className="ac-footer coal"
    >
      <a
        className="footer-link my-account-link"
        href="/test/bauble.html/_appliance/"
        onClick={[Function]}
      >
        <svg
          id="svg_lock"
          viewBox="584 630 10 15"
          xmlns="http://www.w3.org/2000/svg"
        >
          <g
            data-name="Group 24"
            transform="translate(584 630)"
          >
            <path
              className="cls-1"
              d="M7.5,18.375h-5a2.507,2.507,0,0,1-2.5-2.5V11.5A2.507,2.507,0,0,1,2.5,9h5A2.507,2.507,0,0,1,10,11.5v4.375A2.507,2.507,0,0,1,7.5,18.375Zm-5-8.125A1.254,1.254,0,0,0,1.25,11.5v4.375a1.254,1.254,0,0,0,1.25,1.25h5a1.254,1.254,0,0,0,1.25-1.25V11.5A1.254,1.254,0,0,0,7.5,10.25Z"
              data-name="Path 26"
              id="Path_26"
              transform="translate(0 -3.375)"
            />
            <path
              className="cls-1"
              d="M8.875,6.875H2.625A.59.59,0,0,1,2,6.25V3.75A3.761,3.761,0,0,1,5.75,0,3.721,3.721,0,0,1,9.5,3.75v2.5A.626.626,0,0,1,8.875,6.875ZM3.25,5.625h5V3.75a2.5,2.5,0,0,0-5,0Z"
              data-name="Path 27"
              id="Path_27"
              transform="translate(-0.75)"
            />
            <path
              className="cls-1"
              d="M7.25,15.5A1.25,1.25,0,1,1,8.5,14.25,1.254,1.254,0,0,1,7.25,15.5Zm0-1.312Z"
              data-name="Path 28"
              id="Path_28"
              transform="translate(-2.25 -4.875)"
            />
            <path
              className="cls-1"
              d="M7.625,18.125A.59.59,0,0,1,7,17.5V15.625a.625.625,0,0,1,1.25,0V17.5A.626.626,0,0,1,7.625,18.125Z"
              data-name="Path 29"
              id="Path_29"
              transform="translate(-2.625 -5.625)"
            />
          </g>
        </svg>
        Личный кабинет
      </a>
    </div>
  </div>
</div>
`;

exports[`Routes matches the snapshot on the rootpath 1`] = `
<div
  id="ac_layout"
>
  <a
    className="app-switch"
    href="/"
    onClick={[Function]}
  >
    +
  </a>
  <div
    id="online_appointment"
  >
    <div
      className="ac-header"
    >
      <h3>
        Онлайн запись
      </h3>
    </div>
    <a
      className="main-link chosen"
      href="/_appliance/choose-center/"
      onClick={[Function]}
    >
      <span
        className="title"
      >
        Изменить центр красоты
      </span>
      <span
        className="info-text"
      >
        TEST_NAME
      </span>
      <svg
        className="svg-arrow-right"
        viewBox="763 178.586 18.414 12.828"
        xmlns="http://www.w3.org/2000/svg"
      >
        <g
          data-name="Стрелка вперед"
          transform="translate(763 179)"
        >
          <line
            className="cls-1"
            data-name="Line 7"
            id="Line_7"
            transform="translate(12 6)"
            x1="5"
            y2="5"
          />
          <line
            className="cls-1"
            data-name="Line 8"
            id="Line_8"
            transform="translate(12 1)"
            x1="5"
            y1="5"
          />
          <line
            className="cls-1"
            data-name="Line 9"
            id="Line_9"
            transform="translate(1 6)"
            x1="16"
          />
        </g>
      </svg>
    </a>
    <a
      className="main-link"
      href="/_appliance/choose-employee/"
      onClick={[Function]}
    >
      <span
        className="title"
      >
        Выбрать
         сотрудника
      </span>
      <svg
        className="svg-arrow-right"
        viewBox="763 178.586 18.414 12.828"
        xmlns="http://www.w3.org/2000/svg"
      >
        <g
          data-name="Стрелка вперед"
          transform="translate(763 179)"
        >
          <line
            className="cls-1"
            data-name="Line 7"
            id="Line_7"
            transform="translate(12 6)"
            x1="5"
            y2="5"
          />
          <line
            className="cls-1"
            data-name="Line 8"
            id="Line_8"
            transform="translate(12 1)"
            x1="5"
            y1="5"
          />
          <line
            className="cls-1"
            data-name="Line 9"
            id="Line_9"
            transform="translate(1 6)"
            x1="16"
          />
        </g>
      </svg>
    </a>
    <a
      className="main-link"
      href="/_appliance/choose-services/"
      onClick={[Function]}
    >
      <span
        className="title"
      >
        Выбрать услуги
      </span>
      <svg
        className="svg-arrow-right"
        viewBox="763 178.586 18.414 12.828"
        xmlns="http://www.w3.org/2000/svg"
      >
        <g
          data-name="Стрелка вперед"
          transform="translate(763 179)"
        >
          <line
            className="cls-1"
            data-name="Line 7"
            id="Line_7"
            transform="translate(12 6)"
            x1="5"
            y2="5"
          />
          <line
            className="cls-1"
            data-name="Line 8"
            id="Line_8"
            transform="translate(12 1)"
            x1="5"
            y1="5"
          />
          <line
            className="cls-1"
            data-name="Line 9"
            id="Line_9"
            transform="translate(1 6)"
            x1="16"
          />
        </g>
      </svg>
    </a>
    <a
      className="main-link"
      href="/_appliance/choose-datetime/"
      onClick={[Function]}
    >
      <span
        className="title"
      >
        Выбрать дату и время
      </span>
      <svg
        className="svg-arrow-right"
        viewBox="763 178.586 18.414 12.828"
        xmlns="http://www.w3.org/2000/svg"
      >
        <g
          data-name="Стрелка вперед"
          transform="translate(763 179)"
        >
          <line
            className="cls-1"
            data-name="Line 7"
            id="Line_7"
            transform="translate(12 6)"
            x1="5"
            y2="5"
          />
          <line
            className="cls-1"
            data-name="Line 8"
            id="Line_8"
            transform="translate(12 1)"
            x1="5"
            y1="5"
          />
          <line
            className="cls-1"
            data-name="Line 9"
            id="Line_9"
            transform="translate(1 6)"
            x1="16"
          />
        </g>
      </svg>
    </a>
    <div
      className="ac-footer coal"
    >
      <a
        className="footer-link my-account-link"
        href="/_appliance/"
        onClick={[Function]}
      >
        <svg
          id="svg_lock"
          viewBox="584 630 10 15"
          xmlns="http://www.w3.org/2000/svg"
        >
          <g
            data-name="Group 24"
            transform="translate(584 630)"
          >
            <path
              className="cls-1"
              d="M7.5,18.375h-5a2.507,2.507,0,0,1-2.5-2.5V11.5A2.507,2.507,0,0,1,2.5,9h5A2.507,2.507,0,0,1,10,11.5v4.375A2.507,2.507,0,0,1,7.5,18.375Zm-5-8.125A1.254,1.254,0,0,0,1.25,11.5v4.375a1.254,1.254,0,0,0,1.25,1.25h5a1.254,1.254,0,0,0,1.25-1.25V11.5A1.254,1.254,0,0,0,7.5,10.25Z"
              data-name="Path 26"
              id="Path_26"
              transform="translate(0 -3.375)"
            />
            <path
              className="cls-1"
              d="M8.875,6.875H2.625A.59.59,0,0,1,2,6.25V3.75A3.761,3.761,0,0,1,5.75,0,3.721,3.721,0,0,1,9.5,3.75v2.5A.626.626,0,0,1,8.875,6.875ZM3.25,5.625h5V3.75a2.5,2.5,0,0,0-5,0Z"
              data-name="Path 27"
              id="Path_27"
              transform="translate(-0.75)"
            />
            <path
              className="cls-1"
              d="M7.25,15.5A1.25,1.25,0,1,1,8.5,14.25,1.254,1.254,0,0,1,7.25,15.5Zm0-1.312Z"
              data-name="Path 28"
              id="Path_28"
              transform="translate(-2.25 -4.875)"
            />
            <path
              className="cls-1"
              d="M7.625,18.125A.59.59,0,0,1,7,17.5V15.625a.625.625,0,0,1,1.25,0V17.5A.626.626,0,0,1,7.625,18.125Z"
              data-name="Path 29"
              id="Path_29"
              transform="translate(-2.625 -5.625)"
            />
          </g>
        </svg>
        Личный кабинет
      </a>
    </div>
  </div>
</div>
`;

exports[`Routes renders ChooseCenter properly when no center is chosen 1`] = `
<div
  id="ac_layout"
>
  <a
    className="app-switch"
    href="/test/bauble.html"
    onClick={[Function]}
  >
    +
  </a>
  <div
    id="choose_center"
  >
    <div
      className="ac-header"
    >
      <h3>
        Выбрать центр красоты
      </h3>
    </div>
    <div
      className="ac-footer coal"
    >
      <a
        className="footer-link my-account-link"
        href="/test/bauble.html/_appliance/"
        onClick={[Function]}
      >
        <svg
          id="svg_lock"
          viewBox="584 630 10 15"
          xmlns="http://www.w3.org/2000/svg"
        >
          <g
            data-name="Group 24"
            transform="translate(584 630)"
          >
            <path
              className="cls-1"
              d="M7.5,18.375h-5a2.507,2.507,0,0,1-2.5-2.5V11.5A2.507,2.507,0,0,1,2.5,9h5A2.507,2.507,0,0,1,10,11.5v4.375A2.507,2.507,0,0,1,7.5,18.375Zm-5-8.125A1.254,1.254,0,0,0,1.25,11.5v4.375a1.254,1.254,0,0,0,1.25,1.25h5a1.254,1.254,0,0,0,1.25-1.25V11.5A1.254,1.254,0,0,0,7.5,10.25Z"
              data-name="Path 26"
              id="Path_26"
              transform="translate(0 -3.375)"
            />
            <path
              className="cls-1"
              d="M8.875,6.875H2.625A.59.59,0,0,1,2,6.25V3.75A3.761,3.761,0,0,1,5.75,0,3.721,3.721,0,0,1,9.5,3.75v2.5A.626.626,0,0,1,8.875,6.875ZM3.25,5.625h5V3.75a2.5,2.5,0,0,0-5,0Z"
              data-name="Path 27"
              id="Path_27"
              transform="translate(-0.75)"
            />
            <path
              className="cls-1"
              d="M7.25,15.5A1.25,1.25,0,1,1,8.5,14.25,1.254,1.254,0,0,1,7.25,15.5Zm0-1.312Z"
              data-name="Path 28"
              id="Path_28"
              transform="translate(-2.25 -4.875)"
            />
            <path
              className="cls-1"
              d="M7.625,18.125A.59.59,0,0,1,7,17.5V15.625a.625.625,0,0,1,1.25,0V17.5A.626.626,0,0,1,7.625,18.125Z"
              data-name="Path 29"
              id="Path_29"
              transform="translate(-2.625 -5.625)"
            />
          </g>
        </svg>
        Личный кабинет
      </a>
    </div>
  </div>
</div>
`;
